Testing alpine for salesforce-connector

--- a/airbyte-integrations/connectors/source-salesforce/Dockerfile
+++ b/airbyte-integrations/connectors/source-salesforce/Dockerfile
@@ -1,7 +1,8 @@
-FROM python:3.11-slim
+FROM python:3.11.3-alpine3.18
 
 # Bash is installed for more convenient debugging.
-RUN apt-get update && apt-get install -y bash && rm -rf /var/lib/apt/lists/*
+#RUN apt-get update && apt-get install -y bash && rm -rf /var/lib/apt/lists/*
+RUN apk add py3-pandas
 
 ENV AIRBYTE_ENTRYPOINT "python /airbyte/integration_code/main.py"
 
@@ -14,7 +15,9 @@ RUN pip install .
 RUN pip uninstall setuptools -y && \
     pip uninstall pip -y
 
-RUN useradd appuser
+#RUN useradd appuser
+RUN addgroup -S appgroup && \
+    adduser -S appuser -G appgroup -u 1000
 USER appuser
 
 ENTRYPOINT ["python", "/airbyte/integration_code/main.py"]
