Adds dbt install

--- a/airbyte-integrations/bases/base-normalization/Dockerfile
+++ b/airbyte-integrations/bases/base-normalization/Dockerfile
@@ -46,7 +46,8 @@ RUN PATH=$ROOTPATH python -m venv /opt/.venv
 
 ENV PATH=$REQUIREPATH
 
-RUN pip install --upgrade pip
+RUN pip install --upgrade pip &&
+    pip install dbt-core
 
 # installs airbyte dependencies
 COPY --from=airbyte/base-airbyte-protocol-python:0.1.1 /airbyte /airbyte
