Adds user and cleanup

--- a/airbyte-integrations/bases/base-normalization/Dockerfile
+++ b/airbyte-integrations/bases/base-normalization/Dockerfile
@@ -79,4 +79,15 @@ ENTRYPOINT ["/airbyte/entrypoint.sh"]
 LABEL io.airbyte.version=0.4.3
 LABEL io.airbyte.name=airbyte/normalization
 
-# cleanup package managers
+RUN adduser -s /bin/sh -u 1000 -D dbt_user
+
+RUN pip uninstall setuptools -y && \
+    PATH=$ROOTPATH pip uninstall setuptools -y && \
+    pip uninstall pip -y && \
+    PATH=$ROOTPATH pip uninstall pip -y && \
+    rm -rf /usr/local/lib/python3.10/ensurepip && \
+    apk --purge del apk-tools py-pip && \
+    # remove unnecessary private keys
+    find /opt/ /usr/ -name '*.pem' | grep test | xargs rm
+
+USER dbt_user
