Switches to apk

--- a/airbyte-integrations/bases/base-standard-source-test-file/Dockerfile
+++ b/airbyte-integrations/bases/base-standard-source-test-file/Dockerfile
@@ -5,8 +5,7 @@ ARG DOCKER_BUILD_ARCH=amd64
 
 # Install Docker to launch worker images. Eventually should be replaced with Docker-java.
 # See https://gitter.im/docker-java/docker-java?at=5f3eb87ba8c1780176603f4e for more information on why we are not currently using Docker-java
-RUN amazon-linux-extras install -y docker
-RUN yum install -y openssl jq tar && yum clean all
+RUN apk add --update docker openssl jq tar
 
 ENV APPLICATION base-standard-source-test-file
 
