--- a/airbyte-integrations/connectors/source-salesforce/Dockerfile
+++ b/airbyte-integrations/connectors/source-salesforce/Dockerfile
@@ -16,7 +16,7 @@ FROM base as python-src
 ENV PYTHON_URL=https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz
 RUN wget $PYTHON_URL && \
     FILENAME=$(basename $PYTHON_URL) && \
-    tar -xzvf $FILENAME
+    tar -xzvf $FILENAME && \
     rm $FILENAME
 
 
