Setting back to root

--- a/airbyte-integrations/connectors/source-postgres/Dockerfile
+++ b/airbyte-integrations/connectors/source-postgres/Dockerfile
@@ -18,7 +18,8 @@ COPY --from=build /airbyte /airbyte
 RUN addgroup -S appgroup && \
     adduser -S appuser -G appgroup -u 1000
 
-USER appuser
+# needs root to create pipes
+# USER appuser
 
 LABEL io.airbyte.version=2.0.28
 LABEL io.airbyte.name=airbyte/source-postgres
