--- a/airbyte-integrations/connectors/destination-snowflake/Dockerfile
+++ b/airbyte-integrations/connectors/destination-snowflake/Dockerfile
@@ -20,9 +20,10 @@ RUN tar xf ${APPLICATION}.tar --strip-components=1
 
 ENV ENABLE_SENTRY true
 
-RUN addgroup -S appgroup && \
-    adduser -S appuser -G appgroup -u 1000
-USER appuser
+# silently breaking when running as non-root
+# RUN addgroup -S appgroup && \
+#     adduser -S appuser -G appgroup -u 1000
+# USER appuser
 
 LABEL io.airbyte.version=1.0.3
 LABEL io.airbyte.name=airbyte/destination-snowflake
