--- a/airbyte-integrations/connectors/source-google-sheets/Dockerfile
+++ b/airbyte-integrations/connectors/source-google-sheets/Dockerfile
@@ -42,6 +42,11 @@ RUN apk --no-cache add bash && \
 COPY main.py ./
 COPY source_google_sheets ./source_google_sheets
 
+# redundant install step to ensure dependencies available
+RUN pip install wheel setuptools pip --upgrade && \
+    pip install "Cython<3.0" "pyyaml==5.4" --no-build-isolation && \
+    pip install --prefix=/install .
+
 ENV AIRBYTE_ENTRYPOINT "python /airbyte/integration_code/main.py"
 ENTRYPOINT ["python", "/airbyte/integration_code/main.py"]
 
