--- a/airbyte-integrations/connectors/source-postgres/Dockerfile
+++ b/airbyte-integrations/connectors/source-postgres/Dockerfile
@@ -43,3 +43,6 @@ RUN rm /airbyte/lib/netty-codec-4.1.92.Final.jar
 
 # CVE: https://nvd.nist.gov/vuln/detail/CVE-2023-34462
 RUN rm /airbyte/lib/netty-handler-4.1.92.Final.jar
+
+# CVE: https://nvd.nist.gov/vuln/detail/CVE-2023-44487
+RUN rm /airbyte/lib/netty-codec-http2-4.1.86.Final.jar
